// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should apply active color to loading icon 1`] = `
<div
  class="mi-loading mi-loading--circular mi-switch__loading"
  aria-live="polite"
  aria-busy="true"
>
  <span
    class="mi-loading__spinner mi-loading__spinner--circular"
    style="color: red;"
  >
    <svg
      class="mi-loading__circular"
      viewbox="25 25 50 50"
    >
      <circle
        cx="50"
        cy="50"
        r="20"
        fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`should apply inactive color to loading icon 1`] = `
<div
  class="mi-loading mi-loading--circular mi-switch__loading"
  aria-live="polite"
  aria-busy="true"
>
  <span
    class="mi-loading__spinner mi-loading__spinner--circular"
    style="color: black;"
  >
    <svg
      class="mi-loading__circular"
      viewbox="25 25 50 50"
    >
      <circle
        cx="50"
        cy="50"
        r="20"
        fill="none"
      >
      </circle>
    </svg>
  </span>
</div>
`;

exports[`should render background slot correctly 1`] = `
<div
  role="switch"
  class="mi-switch"
  tabindex="0"
  aria-checked="false"
>
  <div class="mi-switch__node">
  </div>
  Custom background
</div>
`;

exports[`should render node slot correctly 1`] = `
<div
  role="switch"
  class="mi-switch"
  tabindex="0"
  aria-checked="false"
>
  <div class="mi-switch__node">
    Custom node
  </div>
</div>
`;
